--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,8 @@
              classPath="lib/ant-salesforce.jar"
              uri="antlib:com.salesforce"/>
 
+    <property file="build.properties"/>
+
     <target name="deployToAllSandboxes" description="Deploys the code to salesforce.com">
         <echo message="Deploying to ${uat_username}"/>
         <sf:deploy username="${uat_username}"
