--- a/src/package.xml
+++ b/src/package.xml
@@ -4,5 +4,9 @@
         <members>Account.My_Custom_Field__c</members>
         <name>CustomField</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>Profile</name>
+    </types>
     <version>32.0</version>
 </Package>
